<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@drawable/background_dialog"
    android:id="@+id/layoutDeleteNoteContainer">
    
    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:id="@+id/imageDeleteNote"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:tint="@color/colorWhite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/bold"
        android:includeFontPadding="false"
        android:text="Delete Note"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
        app:layout_constraintTop_toTopOf="@id/imageDeleteNote"/>
    <TextView
        android:id="@+id/textDeleteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/are_you_sure_want_to_delete_this_note"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textDeleteNote"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/medium"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/delete_now"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textColor="@color/colorDelete"
        app:layout_constraintTop_toBottomOf="@id/textDeleteMessage"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textCancelNote"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/medium"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/cancel_note"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toBottomOf="@id/textDeleteMessage"
        app:layout_constraintRight_toLeftOf="@id/textDeleteNote"/>


</androidx.constraintlayout.widget.ConstraintLayout>